Fixed button from stretching.

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@ a.pull-right {
 	margin: auto;
 	padding: 100px 0px 0px 0px;
 }
+
+.inner-wrap button {
+    
+    width: inherit;
+    
+}
